RESOLVED FIXED256483
StorageManager.persist() is not functional
https://bugs.webkit.org/show_bug.cgi?id=256483
Summary StorageManager.persist() is not functional
Sihui Liu
Reported 2023-05-08 12:57:44 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-08 13:52:51 PDT
Sihui Liu
Comment 2 2023-05-08 14:08:10 PDT
EWS
Comment 3 2023-05-10 14:46:10 PDT
Committed 263930@main (338e1ced429a): <https://commits.webkit.org/263930@main> Reviewed commits have been landed. Closing PR #13597 and removing active labels.
Sihui Liu
Comment 4 2023-05-11 17:01:37 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/39973
Note You need to log in before you can comment on or make changes to this bug.