StorageManager.persist() is not functional https://bugs.webkit.org/show_bug.cgi?id=256483 rdar://109057460

Reviewed by Youenn Fablet.

StorageManager.persist() currently sets an in-memory flag of OriginStorageManager unconditionally and the flag does not
do anything. Now that we have implemented eviction based on quota, this patch ensures the eviction will check persited
flag and skip deleting the origin if its flag is set. Also, this patch ensures persisted flag is stored to disk by
creating a persisted file.

* LayoutTests/imported/w3c/web-platform-tests/storage/storagemanager-persist-persisted-match.https.any-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/storage/storagemanager-persist-persisted-match.https.any.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/storage/storagemanager-persist-persisted-match.https.any.js: Added.
(promise_test.async t):
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::persistedFilePath):
(WebKit::NetworkStorageManager::donePrepareForEviction):
(WebKit::NetworkStorageManager::performEviction):
(WebKit::NetworkStorageManager::persistedInternal):
(WebKit::NetworkStorageManager::persisted):
(WebKit::NetworkStorageManager::persist):
(WebKit::NetworkStorageManager::resetStoragePersistedState):
(WebKit::NetworkStorageManager::deleteDataOnDisk):
(WebKit::NetworkStorageManager::evictDataByTopOrigin): Deleted.
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.h:
* Source/WebKit/NetworkProcess/storage/OriginStorageManager.cpp:
(WebKit::OriginStorageManager::setPersisted): Deleted.
* Source/WebKit/NetworkProcess/storage/OriginStorageManager.h:
(WebKit::OriginStorageManager::persisted const): Deleted.

Canonical link: https://commits.webkit.org/263930@main